--- a/styles/header.css
+++ b/styles/header.css
@@ -1,13 +1,13 @@
 header {
     display: flex;
-    position: sticky;
-    top: 0.5rem;
+    position: fixed;
+
+    width: 100vw;
 
     justify-content: flex-end;
 
-    /* NOTE: I'm jsut trying new things on the navbar, these round corners will probably not make it to the end project. */
-    margin: 0.5rem;
-    border-radius: 0.5rem;
+    /* margin: 0.5rem; */
+
     box-shadow: 0 0 20px gray;
 
     background: var(--strong-color);
@@ -22,7 +22,7 @@ header {
     align-items: center;
     justify-content: space-evenly;
 
-    height: 3rem;
+    height: 4rem;
 }
 
 #navbar a {
